--- a/dev/index.html
+++ b/dev/index.html
@@ -35,7 +35,7 @@
         <![endif]-->
 
         <div class="test--center">
-            <h1 class="test__title">tititit</h1>
+            <h1 class="test__title">ciao</h1>
 
             <h2>ciao</h2>
 }
