--- a/dev/index.html
+++ b/dev/index.html
@@ -39,8 +39,8 @@
         <div class="test--center">
             <h1 class="test__title">ciao</h1>
 
-            <h2>ciao</h2>
-}
+            <h2>pinco</h2>
+
             <ul>
                 <!-- <li><a href="_nav.html">Navigation</a></li> -->
                 <li><a target="_blank" href="_box.html">Box</a></li>
